# reference_manager

./: CMakeLists.txt  README.md  package.xml
include/reference_manager/: error_code.h  referencer.h
launch/: referencer.launch
src/: reference_node.cpp  referencer.cpp
